<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.finished.DetailFinished">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_image_finished"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="12dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/homeEventLogoFinished"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/event_logo_desc"
                        android:scaleType="centerCrop" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="16dp"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/favorite_icon"
                        android:src="@drawable/ic_favorite" />

                </FrameLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/home_event_name_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_event_owner_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/home_event_time_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/home_event_quota_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/home_event_desc_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/home_event_link_button_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:text="@string/Lihat_Acara"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarHomeFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
